# aruco_pj

src/aruco_tracker/: CMakeLists.txt  package.xml  setup.py
src/aruco_tracker/aruco_tracker/: aligned_depth_pub.py  aruco_depth_pose.py  pickup_controller.py
src/aruco_tracker/launch/: aruco.launch.py
