<?xml version="1.0"?>
<package format="3">
  <name>aruco_tracker</name>
  <version>0.0.1</version>
  <description>Aruco tracking node for RealSense and ROS2</description>
  <maintainer email="dlekql3915@gmail.com">dabin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Optional (for clarity only, pip로 설치됨) -->
  <!-- <exec_depend>python3-opencv</exec_depend> -->
  <!-- <exec_depend>python3-pyrealsense2</exec_depend> -->

  <!-- Export so that ros2 launch & run can detect package -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
